--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ant-design/react-native": "^3.1.11",
     "react": "16.8.6",
     "react-native": "0.60.0",
     "react-native-elements": "^1.1.0",
