--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^3.1.11",
+    "native-base": "^2.13.4",
     "react": "16.8.6",
     "react-native": "0.60.0",
     "react-native-elements": "^1.1.0",
