--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@ant-design/react-native": "^3.1.11",
+    "@shoutem/ui": "^1.0.1",
     "native-base": "^2.13.4",
     "react": "16.8.6",
     "react-native": "0.60.0",
-    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
