--- a/.gitignore
+++ b/.gitignore
@@ -57,15 +57,7 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
-__tests__
 android
 ios
-yarn.lock
-package-lock.json
-babel.config.js
-.buckconfig
-.eslintrc.js
-.flowconfig
-.gitattributes
-api/pro/spider.php
-/api/dev/db.txt
+package.json-bak
+__tests__
